# nexashell

./: .gitignore  .pnpmfile.cjs  .prettierrc  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: copilot-instructions.md
src/: App.vue  index.ts  main.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  encryption.rs  keychain.rs  lib.rs  main.rs  ssh.rs  system.rs  terminal.rs  test_compile.rs
src/components/common/: ConfirmDialog.vue  ConnectionProgressBar.vue  DropdownMenu.vue  GroupTagsMultiSelect.vue  GroupsMultiSelect.vue  MultiSelect.vue  ShortcutHint.vue  TabItem.vue  TagsMultiSelect.vue  WelcomeScreen.vue
src/components/connections/: RemoteConnectionView.vue  SSHConnectionForm.vue  ServerDashboard.vue  ServerStatusView.vue
src/components/dialogs/: SSHConnectionForm.vue
src/components/home/: NexaShellHome.vue
src/components/layout/: AppContent.vue  AppTabs.vue  WindowTitleBar.vue  WindowTitleBar.vue.bak
src/composables/: index.ts  use-modal.ts  use-tab-management.ts
src/config/: env.ts  index.ts
src/constants/: events.ts  index.ts  menu.ts  tab.ts
src/core/config/: index.ts
src/styles/: common.css  design-system.css
src/types/: index.ts  injection-keys.ts  ssh.ts  tab.ts
src/utils/: app-utils.ts  error-handler.ts  event-bus.ts  index.ts  shortcut-manager.ts  shortcuts.ts  sum.ts  tauri-system.ts  theme-manager.ts
tests/: setup.ts
tests/unit/: sum.test.ts
(+58 files in other folders)
