[package]
name = "NexaShell"
version = "1.0.0"
description = "This is a modern SSH client."
authors = ["ChengVar <chengver@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "nexashell_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5.0"
once_cell = "1.19"
# keyring is removed
machine-uid = "0.3"
portable-pty = "0.9.0"

[dependencies.aes-gcm]
version = "0.10"

[dependencies.pbkdf2]
version = "0.12"

[dependencies.sha2]
version = "0.10"

[dependencies.rand]
version = "0.8"

[dependencies.base64]
version = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]

